--- a/student_explorer/templates/405.html
+++ b/student_explorer/templates/405.html
@@ -7,6 +7,9 @@
 {% block content %}
 <div class="container">
     <h1>Permission Denied</h1>
-    <p>You do not currently have access to Student Explorer. To learn about Student Explorer and its history, see <a href="/about">About Student Explorer</a>. For more information about using Student Explorer including how to get access and who to contact for assistance, please see the <a href="https://documentation.its.umich.edu/student-explorer-general">Student Explorer documentation.</a></p>
+    <p>You do not currently have access to Student Explorer. To learn about Student Explorer and its history, see 
+        <a href="/about">About Student Explorer</a>. For more information about using Student Explorer, including 
+        how to get access and who to contact for assistance, see 
+        <a href="https://documentation.its.umich.edu/student-explorer-general">Student Explorer Resources & Support.</a></p>
 </div>
 {% endblock %}
