--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -31,7 +31,7 @@
         <h2 class="list-header">Contact the Student Explorer Team</h2>
         <p>ITS Teaching & Learning manages Student Explorer; the Service Manager is
             <a href="https://mcommunity.umich.edu/#profile:jmaggie">Maggie Davidson</a>. Get in touch by
-            <a href="/feedback">submitting feedback</a>!
+            emailing <a href="mailto:student-explorer-help@umich.edu">student-explorer-help@umich.edu</a>!
         </p>
 
         <hr/>
