--- a/student_explorer/templates/403.html
+++ b/student_explorer/templates/403.html
@@ -15,9 +15,11 @@
         <a href="https://documentation.its.umich.edu/student-explorer-general">Student 
             Explorer Resources & Support.</a></p>
     <h2 class="list-header">How do I request access to Student Explorer?</h2>
-    <p><a href="https://documentation.its.umich.edu/student-explorer-access">Learn how access to Student Explorer is governed,
-        who can get access to it, and who already has access</a> or go ahead and
-        <a href="https://umichprod.service-now.com/sp?id=sc_cat_item&sys_id=0d0870f6db058410f0f52b35ca9619ee">submit a 
-            request for access using this form</a>.</p>
+    <ul>
+        <li><a href="https://documentation.its.umich.edu/student-explorer-access">Learn how access to
+            Student Explorer is governed, who can get access to it, and who already has access</a></li>
+        <li><a href="https://umichprod.service-now.com/sp?id=sc_cat_item&sys_id=0d0870f6db058410f0f52b35ca9619ee">Submit a 
+            request for access for yourself or someone else</a></li>
+    </ul>
 </div>
 {% endblock %}
