Issue #217 Remove duplicate period

--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -18,7 +18,7 @@
             request for access. It includes information about all students on the Ann Arbor campus who use Canvas,
             including graduate students (note: some programs do not use Canvas and those students will not be
             visible in Student Explorer). <a href="https://documentation.its.umich.edu/student-explorer-access">Learn
-                how to gain access to Student Explorer and how access is governed.</a>.
+                how to gain access to Student Explorer and how access is governed</a>.
         </p>
 
         <h2 class="list-header">Student Explorer History</h2>
