--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -50,21 +50,25 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                <a href="{% url 'about' %}">
-                    <span class="main-color-white main-navbar-brand navbar-brand"><img id="student-explorer-logo" src="/static/seumich/images/se-logo.svg" alt="student explorer logo">Student Explorer</span>
-                </a>
+                    <a href="{% url 'about' %}">
+                        <span class="main-color-white main-navbar-brand navbar-brand"><img id="student-explorer-logo" src="/static/seumich/images/se-logo.svg" alt="student explorer logo">Student Explorer</span>
+                    </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
-                    <form action="{% url 'seumich:students_list' %}" method="get" class="navbar-form navbar-left">
-                        <div class="form-group">
-                            <label for="student-search" class="sr-only">Search student name, uniqname, or UMID...</label>
-                            <input id="student-search" value="{{ query_user | default_if_none:'' }}" name="search" type="text" class="form-control" placeholder="Search student name, uniqname, or UMID...">
-                        </div>
-                    </form>
+                    {% if user.is_authenticated %}
+                        <form action="{% url 'seumich:students_list' %}" method="get" class="navbar-form navbar-left">
+                            <div class="form-group">
+                                <label for="student-search" class="sr-only">Search student name, uniqname, or UMID...</label>
+                                <input id="student-search" value="{{ query_user | default_if_none:'' }}" name="search" type="text" class="form-control" placeholder="Search student name, uniqname, or UMID...">
+                            </div>
+                        </form>
+                    {% endif %}
                     <ul class="nav navbar-nav navbar-right">
-                        <li {% if request.path == mystudentsurl %} class="active" {% endif %}>
-                            <a href="{% url 'seumich:index' %}" data-toggle="collapse" data-target="#navbar.in">My Students</a>
-                        </li>
+                        {% if user.is_authenticated %}
+                            <li {% if request.path == mystudentsurl %} class="active" {% endif %}>
+                                <a href="{% url 'seumich:index' %}" data-toggle="collapse" data-target="#navbar.in">My Students</a>
+                            </li>
+                        {% endif %}
                         <li {% if request.path == abouturl %} class="active" {% endif %}>
                             <a href="{% url 'about' %}">About</a>
                         </li>
