Change to not use Week for tick labels; change column sizes in assignment table; remove text-center; add assignment-row-description class

--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -118,18 +118,14 @@
                             chart.y(function (d) {
                                 return d[1];
                             });
-                            chart.xAxis.axisLabel('Week').tickFormat(function (d) {
-                                if (window.innerWidth >= 1150) {
-                                    return 'Week ' + d;
-                                } else {
-                                    return d;
-                                }
 
+                            chart.xAxis.axisLabel('Week').tickFormat(function (d) {
+                                return d;
                             });
                             chart.yAxis.tickFormat(function (d) {
                                 return d + '%';
-
                             });
+
                             d3.select('#chart1 svg').datum(data).transition().duration(500).call(chart);
                             nv.utils.windowResize(chart.update);
                             return chart;
@@ -154,18 +150,14 @@
                             chart.y(function (d) {
                                 return d[1];
                             });
-                            chart.xAxis.axisLabel('Week').tickFormat(function (d) {
-                                if (window.innerWidth >= 1150) {
-                                    return 'Week ' + d;
-                                } else {
-                                    return d;
-                                }
 
+                            chart.xAxis.axisLabel('Week').tickFormat(function (d) {
+                                return d;
                             });
                             chart.yAxis.tickFormat(function (d) {
                                 return d + '%ile';
-
                             });
+
                             d3.select('#chart2 svg').datum(data).transition().duration(500).call(chart);
                             nv.utils.windowResize(chart.update);
                             return chart;
@@ -191,7 +183,7 @@
                         <div class="assignment-table">
                             <div class="container-fluid">
                                 <div class="row hide-small-grid">
-                                    <div class="col-md-2">
+                                    <div class="col-md-3">
                                         <strong class="table-column-name">Assignment</strong>
                                     </div>
                                     <div class="col-md-2">
@@ -200,13 +192,13 @@
                                     <div class="col-md-2">
                                         <strong class="table-column-name">Points Earned/Possible</strong>
                                     </div>
-                                    <div class="col-md-2">
+                                    <div class="col-md-1">
                                         <strong class="table-column-name">Student Percentage</strong>
                                     </div>
-                                    <div class="col-md-2">
+                                    <div class="col-md-1">
                                         <strong class="table-column-name">Class Average</strong>
                                     </div>
-                                    <div class="col-md-2">
+                                    <div class="col-md-3">
                                         <strong class="table-column-name">Grader's Comment</strong>
                                     </div>
                                 </div>
@@ -217,14 +209,14 @@
                                 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                                     {% for assignment in assignments %}
                                         <div class="row hide-small-grid">
-                                            <div class="col-md-2">{{assignment.assignment.description}}</div>
+                                            <div class="col-md-3 assignment-row-description">{{assignment.assignment.description}}</div>
                                             <div class="col-md-2">
                                                 {% if assignment.due_date %}{{assignment.due_date.date}}{% endif %}
                                             </div>
-                                            <div class="col-md-2 text-center">{{assignment.points_earned|floatformat}}/{{assignment.points_possible|floatformat}}</div>
-                                            <div class="col-md-2 text-center">{{assignment.points_earned|divide:assignment.points_possible|multiply:100|floatformat}}%</div>
-                                            <div class="col-md-2 text-center">{{assignment.class_points_earned|divide:assignment.class_points_possible|multiply:100|floatformat}}%</div>
-                                            <div class="col-md-2">
+                                            <div class="col-md-2">{{assignment.points_earned|floatformat}}/{{assignment.points_possible|floatformat}}</div>
+                                            <div class="col-md-1">{{assignment.points_earned|divide:assignment.points_possible|multiply:100|floatformat}}%</div>
+                                            <div class="col-md-1">{{assignment.class_points_earned|divide:assignment.class_points_possible|multiply:100|floatformat}}%</div>
+                                            <div class="col-md-3">
                                                 {% if assignment.grader_comment %}
                                                     <span>
                                                         <span id="comment-title-{{assignment.assignment.id}}">View Comment</span>
