issue_249 remove the Service Manager line

--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -29,8 +29,7 @@
         </p>
 
         <h2 class="list-header">Contact the Student Explorer Team</h2>
-        <p>ITS Teaching & Learning manages Student Explorer; the Service Manager is
-            <a href="https://mcommunity.umich.edu/#profile:jmaggie">Maggie Davidson</a>. Get in touch by
+        <p>ITS Teaching & Learning manages Student Explorer; Get in touch by
             emailing <a href="mailto:student-explorer-help@umich.edu">student-explorer-help@umich.edu</a>!
         </p>
 
