Fixes #251 - Update Django to 3.2 and related dependencies Fixes #247 - Update Django Saml Package Fall 2020 Fixes #252 - Update python from 3.6 to 3.7

--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -1,5 +1,5 @@
 {% extends 'management/base.html' %}
-{% load staticfiles %}
+{% load static %}
 {% block management %}
 
 <script src='{% static 'seumich/sort_table.js' %}'></script>
