--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -1,7 +1,7 @@
 {% extends 'seumich/student.html' %}
 {% load filters cache %}
 {% block head %}
-    {% load staticfiles %}
+    {% load static %}
     <script src='{% static "seumich/student.js" %}'></script>
     <script src='{% static "seumich/assignment_list_table.js" %}'></script>
 {% endblock %}
