--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -2,7 +2,7 @@
 {% load filters cache %}
 
 {% block head %}
-    {% load staticfiles %}
+    {% load static %}
     <script src='{% static "seumich/student.js" %}'></script>
 {% endblock %}
 
