--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -1,5 +1,5 @@
 {% load filters %}
-{% load static from staticfiles %}
+{% load static from static %}
 
 <script src='{% static 'seumich/sort_table.js' %}'></script>
 
