--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -11,7 +11,7 @@
 
           gtag('config', 'UA-120370966-1');
         </script>
-        {% load static from staticfiles %}
+        {% load static %}
         <meta charset="utf-8">
         <title>Student Explorer</title>
         <meta name="description" content="">
