--- a/seumich/templates/base.html
+++ b/seumich/templates/base.html
@@ -1,5 +1,5 @@
 <head>
-    {% load staticfiles %}
+    {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/dist/css/bootstrap.css' %}">
 </head>
 <title>Student Explorer</title>
