--- a/seumich/templates/seumich/cohort_list.html
+++ b/seumich/templates/seumich/cohort_list.html
@@ -1,7 +1,7 @@
 {% extends 'seumich/advisor.html' %}
 
 {% block head %}
-    {% load staticfiles %}
+    {% load static %}
     <script src='{% static 'seumich/sort_table.js' %}'></script>
 {% endblock %}
 
